# WebRTC_Client_A

./: CMakeLists.txt  MediaConstraints.h  SignalingManager.cpp  SignalingManager.h  TIPS.md  WebcamStreamerConductor.cpp  WebcamStreamerConductor.h  YuvFrameGenerator.cpp  YuvFrameGenerator.h  YuvVideoCapturer.h  conductor.cc  conductor.h  defaults.cc  defaults.h  flagdefs.h  main.cpp  main_main_wnd.h  main_wnd.cc  main_wnd.h  peer_connection_client.cc  peer_connection_client.h
